--- a/src/blocks/profile/__change-avatar/profile__change-avatar.css
+++ b/src/blocks/profile/__change-avatar/profile__change-avatar.css
@@ -7,7 +7,7 @@
     border-radius: 50%;
     transition: .4s;
     background-color: rgba(0, 0, 0, .8);
-    background-image: url("./../../../images/Vector.svg");
+    background-image: url("../../../images/Vector.svg");
     background-repeat: no-repeat;
     background-size: 26px;
     background-position: center;
